fix: label container alignment

--- a/apps/frontend/src/app/modules/posts/components/posts/posts.component.scss
+++ b/apps/frontend/src/app/modules/posts/components/posts/posts.component.scss
@@ -32,7 +32,7 @@
 }
 
 .label-container {
-  max-width: 770px;
+  max-width: 650px;
   margin: 30px auto 12px;
 }
 
